y.output
   0  $accept : input $end

   1  input :
   2        | input line

   3  line : NL
   4       | exp NL
   5       | cmd NL

   6  cmd : exp ';'
   7      | IF '(' exp ')' cmd
   8      | IF '(' exp ')' cmd ELSE cmd
   9      | WHILE '(' exp ')' cmd
  10      | FOR '(' exp ';' exp ';' exp ')' cmd
  11      | '{' lcmd '}'
  12      | error ';'

  13  lcmd : lcmd cmd
  14       |

  15  exp : NUM
  16      | IDENT '=' exp
  17      | IDENT
  18      | exp '+' exp
  19      | exp '-' exp
  20      | exp '*' exp
  21      | exp '/' exp
  22      | exp '<' exp
  23      | '-' exp
  24      | exp '^' exp
  25      | '(' exp ')'

state 0
	$accept : . input $end  (0)
	input : .  (1)

	.  reduce 1

	input  goto 1


state 1
	$accept : input . $end  (0)
	input : input . line  (2)

	$end  accept
	error  shift 2
	NL  shift 3
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	'{'  shift 11
	.  error

	exp  goto 12
	cmd  goto 13
	line  goto 14


state 2
	cmd : error . ';'  (12)

	';'  shift 15
	.  error


state 3
	line : NL .  (3)

	.  reduce 3


state 4
	exp : NUM .  (15)

	.  reduce 15


state 5
	cmd : IF . '(' exp ')' cmd  (7)
	cmd : IF . '(' exp ')' cmd ELSE cmd  (8)

	'('  shift 16
	.  error


state 6
	cmd : WHILE . '(' exp ')' cmd  (9)

	'('  shift 17
	.  error


state 7
	cmd : FOR . '(' exp ';' exp ';' exp ')' cmd  (10)

	'('  shift 18
	.  error


state 8
	exp : IDENT . '=' exp  (16)
	exp : IDENT .  (17)

	'='  shift 19
	NL  reduce 17
	'<'  reduce 17
	'-'  reduce 17
	'+'  reduce 17
	'*'  reduce 17
	'/'  reduce 17
	'^'  reduce 17
	';'  reduce 17
	')'  reduce 17


state 9
	exp : '-' . exp  (23)

	NUM  shift 4
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	.  error

	exp  goto 20


state 10
	exp : '(' . exp ')'  (25)

	NUM  shift 4
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	.  error

	exp  goto 21


state 11
	cmd : '{' . lcmd '}'  (11)
	lcmd : .  (14)

	.  reduce 14

	lcmd  goto 22


state 12
	line : exp . NL  (4)
	cmd : exp . ';'  (6)
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : exp . '^' exp  (24)

	NL  shift 23
	'<'  shift 24
	'-'  shift 25
	'+'  shift 26
	'*'  shift 27
	'/'  shift 28
	'^'  shift 29
	';'  shift 30
	.  error


state 13
	line : cmd . NL  (5)

	NL  shift 31
	.  error


state 14
	input : input line .  (2)

	.  reduce 2


state 15
	cmd : error ';' .  (12)

	.  reduce 12


state 16
	cmd : IF '(' . exp ')' cmd  (7)
	cmd : IF '(' . exp ')' cmd ELSE cmd  (8)

	NUM  shift 4
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	.  error

	exp  goto 32


state 17
	cmd : WHILE '(' . exp ')' cmd  (9)

	NUM  shift 4
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	.  error

	exp  goto 33


state 18
	cmd : FOR '(' . exp ';' exp ';' exp ')' cmd  (10)

	NUM  shift 4
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	.  error

	exp  goto 34


state 19
	exp : IDENT '=' . exp  (16)

	NUM  shift 4
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	.  error

	exp  goto 35


state 20
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : '-' exp .  (23)
	exp : exp . '^' exp  (24)

	'^'  shift 29
	NL  reduce 23
	'<'  reduce 23
	'-'  reduce 23
	'+'  reduce 23
	'*'  reduce 23
	'/'  reduce 23
	';'  reduce 23
	')'  reduce 23


state 21
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : exp . '^' exp  (24)
	exp : '(' exp . ')'  (25)

	'<'  shift 24
	'-'  shift 25
	'+'  shift 26
	'*'  shift 27
	'/'  shift 28
	'^'  shift 29
	')'  shift 36
	.  error


state 22
	cmd : '{' lcmd . '}'  (11)
	lcmd : lcmd . cmd  (13)

	error  shift 2
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	'{'  shift 11
	'}'  shift 37
	.  error

	exp  goto 38
	cmd  goto 39


state 23
	line : exp NL .  (4)

	.  reduce 4


state 24
	exp : exp '<' . exp  (22)

	NUM  shift 4
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	.  error

	exp  goto 40


state 25
	exp : exp '-' . exp  (19)

	NUM  shift 4
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	.  error

	exp  goto 41


state 26
	exp : exp '+' . exp  (18)

	NUM  shift 4
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	.  error

	exp  goto 42


state 27
	exp : exp '*' . exp  (20)

	NUM  shift 4
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	.  error

	exp  goto 43


state 28
	exp : exp '/' . exp  (21)

	NUM  shift 4
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	.  error

	exp  goto 44


state 29
	exp : exp '^' . exp  (24)

	NUM  shift 4
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	.  error

	exp  goto 45


state 30
	cmd : exp ';' .  (6)

	.  reduce 6


state 31
	line : cmd NL .  (5)

	.  reduce 5


state 32
	cmd : IF '(' exp . ')' cmd  (7)
	cmd : IF '(' exp . ')' cmd ELSE cmd  (8)
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : exp . '^' exp  (24)

	'<'  shift 24
	'-'  shift 25
	'+'  shift 26
	'*'  shift 27
	'/'  shift 28
	'^'  shift 29
	')'  shift 46
	.  error


state 33
	cmd : WHILE '(' exp . ')' cmd  (9)
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : exp . '^' exp  (24)

	'<'  shift 24
	'-'  shift 25
	'+'  shift 26
	'*'  shift 27
	'/'  shift 28
	'^'  shift 29
	')'  shift 47
	.  error


state 34
	cmd : FOR '(' exp . ';' exp ';' exp ')' cmd  (10)
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : exp . '^' exp  (24)

	'<'  shift 24
	'-'  shift 25
	'+'  shift 26
	'*'  shift 27
	'/'  shift 28
	'^'  shift 29
	';'  shift 48
	.  error


state 35
	exp : IDENT '=' exp .  (16)
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : exp . '^' exp  (24)

	'<'  shift 24
	'-'  shift 25
	'+'  shift 26
	'*'  shift 27
	'/'  shift 28
	'^'  shift 29
	NL  reduce 16
	';'  reduce 16
	')'  reduce 16


state 36
	exp : '(' exp ')' .  (25)

	.  reduce 25


state 37
	cmd : '{' lcmd '}' .  (11)

	.  reduce 11


state 38
	cmd : exp . ';'  (6)
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : exp . '^' exp  (24)

	'<'  shift 24
	'-'  shift 25
	'+'  shift 26
	'*'  shift 27
	'/'  shift 28
	'^'  shift 29
	';'  shift 30
	.  error


state 39
	lcmd : lcmd cmd .  (13)

	.  reduce 13


state 40
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : exp '<' exp .  (22)
	exp : exp . '^' exp  (24)

	'-'  shift 25
	'+'  shift 26
	'*'  shift 27
	'/'  shift 28
	'^'  shift 29
	NL  reduce 22
	';'  reduce 22
	')'  reduce 22


state 41
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp '-' exp .  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : exp . '^' exp  (24)

	'*'  shift 27
	'/'  shift 28
	'^'  shift 29
	NL  reduce 19
	'<'  reduce 19
	'-'  reduce 19
	'+'  reduce 19
	';'  reduce 19
	')'  reduce 19


state 42
	exp : exp . '+' exp  (18)
	exp : exp '+' exp .  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : exp . '^' exp  (24)

	'*'  shift 27
	'/'  shift 28
	'^'  shift 29
	NL  reduce 18
	'<'  reduce 18
	'-'  reduce 18
	'+'  reduce 18
	';'  reduce 18
	')'  reduce 18


state 43
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp '*' exp .  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : exp . '^' exp  (24)

	'^'  shift 29
	NL  reduce 20
	'<'  reduce 20
	'-'  reduce 20
	'+'  reduce 20
	'*'  reduce 20
	'/'  reduce 20
	';'  reduce 20
	')'  reduce 20


state 44
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp '/' exp .  (21)
	exp : exp . '<' exp  (22)
	exp : exp . '^' exp  (24)

	'^'  shift 29
	NL  reduce 21
	'<'  reduce 21
	'-'  reduce 21
	'+'  reduce 21
	'*'  reduce 21
	'/'  reduce 21
	';'  reduce 21
	')'  reduce 21


state 45
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : exp . '^' exp  (24)
	exp : exp '^' exp .  (24)

	'^'  shift 29
	NL  reduce 24
	'<'  reduce 24
	'-'  reduce 24
	'+'  reduce 24
	'*'  reduce 24
	'/'  reduce 24
	';'  reduce 24
	')'  reduce 24


state 46
	cmd : IF '(' exp ')' . cmd  (7)
	cmd : IF '(' exp ')' . cmd ELSE cmd  (8)

	error  shift 2
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	'{'  shift 11
	.  error

	exp  goto 38
	cmd  goto 49


state 47
	cmd : WHILE '(' exp ')' . cmd  (9)

	error  shift 2
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	'{'  shift 11
	.  error

	exp  goto 38
	cmd  goto 50


state 48
	cmd : FOR '(' exp ';' . exp ';' exp ')' cmd  (10)

	NUM  shift 4
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	.  error

	exp  goto 51


49: shift/reduce conflict (shift 52, reduce 7) on ELSE
state 49
	cmd : IF '(' exp ')' cmd .  (7)
	cmd : IF '(' exp ')' cmd . ELSE cmd  (8)

	ELSE  shift 52
	error  reduce 7
	NL  reduce 7
	NUM  reduce 7
	IF  reduce 7
	WHILE  reduce 7
	FOR  reduce 7
	IDENT  reduce 7
	'-'  reduce 7
	'('  reduce 7
	'{'  reduce 7
	'}'  reduce 7


state 50
	cmd : WHILE '(' exp ')' cmd .  (9)

	.  reduce 9


state 51
	cmd : FOR '(' exp ';' exp . ';' exp ')' cmd  (10)
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : exp . '^' exp  (24)

	'<'  shift 24
	'-'  shift 25
	'+'  shift 26
	'*'  shift 27
	'/'  shift 28
	'^'  shift 29
	';'  shift 53
	.  error


state 52
	cmd : IF '(' exp ')' cmd ELSE . cmd  (8)

	error  shift 2
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	'{'  shift 11
	.  error

	exp  goto 38
	cmd  goto 54


state 53
	cmd : FOR '(' exp ';' exp ';' . exp ')' cmd  (10)

	NUM  shift 4
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	.  error

	exp  goto 55


state 54
	cmd : IF '(' exp ')' cmd ELSE cmd .  (8)

	.  reduce 8


state 55
	cmd : FOR '(' exp ';' exp ';' exp . ')' cmd  (10)
	exp : exp . '+' exp  (18)
	exp : exp . '-' exp  (19)
	exp : exp . '*' exp  (20)
	exp : exp . '/' exp  (21)
	exp : exp . '<' exp  (22)
	exp : exp . '^' exp  (24)

	'<'  shift 24
	'-'  shift 25
	'+'  shift 26
	'*'  shift 27
	'/'  shift 28
	'^'  shift 29
	')'  shift 56
	.  error


state 56
	cmd : FOR '(' exp ';' exp ';' exp ')' . cmd  (10)

	error  shift 2
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	IDENT  shift 8
	'-'  shift 9
	'('  shift 10
	'{'  shift 11
	.  error

	exp  goto 38
	cmd  goto 57


state 57
	cmd : FOR '(' exp ';' exp ';' exp ')' cmd .  (10)

	.  reduce 10


State 49 contains 1 shift/reduce conflict.


23 terminals, 6 nonterminals
26 grammar rules, 58 states
